syntax = "proto3";
package rpcx;

//--------------------request & response--------------

message RpcxMsg {
    string Msg = 1;
    bool Finish = 2;
}

//----------------------service-------------------
service RpcxEcho {
    rpc echoMsg (RpcxMsg) returns (RpcxMsg) {
    }
}